#
# Copyright (c) 2012-2016 ACE Project
# $COPYRIGHT$
#

SUBDIRS = src test sample scripts
EXTRA_DIST = README INSTALL VERSION Doxyfile Doxyfile.jp License \
	     ChangeLog RELEASE_NOTES

ACLOCAL_AMFLAGS = -I config

man_MANS = \
man/man3/ACP_ATKEY_NULL.3 \
man/man3/ACP_GA_NULL.3 \
man/man3/ACP_HANDLE_ALL.3 \
man/man3/ACP_HANDLE_CONT.3 \
man/man3/ACP_HANDLE_NULL.3 \
man/man3/ACP_WSD_NULL.3 \
man/man3/GMA.3 \
man/man3/GMM.3 \
man/man3/acp.h.3 \
man/man3/acp_abort.3 \
man/man3/acp_add4.3 \
man/man3/acp_add8.3 \
man/man3/acp_advance.3 \
man/man3/acp_advance_deque_it.3 \
man/man3/acp_advance_list_it.3 \
man/man3/acp_advance_map_it.3 \
man/man3/acp_advance_set_it.3 \
man/man3/acp_advance_vector_it.3 \
man/man3/acp_and4.3 \
man/man3/acp_and8.3 \
man/man3/acp_assign.3 \
man/man3/acp_assign_deque.3 \
man/man3/acp_assign_list.3 \
man/man3/acp_assign_map.3 \
man/man3/acp_assign_range.3 \
man/man3/acp_assign_range_deque.3 \
man/man3/acp_assign_range_list.3 \
man/man3/acp_assign_range_map.3 \
man/man3/acp_assign_range_set.3 \
man/man3/acp_assign_range_vector.3 \
man/man3/acp_assign_set.3 \
man/man3/acp_assign_vector.3 \
man/man3/acp_at.3 \
man/man3/acp_at_deque.3 \
man/man3/acp_at_vector.3 \
man/man3/acp_atkey_t.3 \
man/man3/acp_back.3 \
man/man3/acp_begin.3 \
man/man3/acp_begin_deque.3 \
man/man3/acp_begin_list.3 \
man/man3/acp_begin_map.3 \
man/man3/acp_begin_set.3 \
man/man3/acp_begin_vector.3 \
man/man3/acp_bucket.3 \
man/man3/acp_bucket_count.3 \
man/man3/acp_bucket_count_map.3 \
man/man3/acp_bucket_count_set.3 \
man/man3/acp_bucket_map.3 \
man/man3/acp_bucket_set.3 \
man/man3/acp_bucket_size.3 \
man/man3/acp_bucket_size_map.3 \
man/man3/acp_bucket_size_set.3 \
man/man3/acp_capacity.3 \
man/man3/acp_capacity_deque.3 \
man/man3/acp_capacity_vector.3 \
man/man3/acp_cas4.3 \
man/man3/acp_cas8.3 \
man/man3/acp_ch_t.3 \
man/man3/acp_clear.3 \
man/man3/acp_clear_deque.3 \
man/man3/acp_clear_list.3 \
man/man3/acp_clear_map.3 \
man/man3/acp_clear_set.3 \
man/man3/acp_clear_vector.3 \
man/man3/acp_colors.3 \
man/man3/acp_complete.3 \
man/man3/acp_copy.3 \
man/man3/acp_count.3 \
man/man3/acp_create.3 \
man/man3/acp_create_ch.3 \
man/man3/acp_create_deque.3 \
man/man3/acp_create_list.3 \
man/man3/acp_create_map.3 \
man/man3/acp_create_set.3 \
man/man3/acp_create_vector.3 \
man/man3/acp_create_ws.3 \
man/man3/acp_decrement.3 \
man/man3/acp_decrement_list_it.3 \
man/man3/acp_decrement_map_it.3 \
man/man3/acp_decrement_set_it.3 \
man/man3/acp_deque_it_t.3 \
man/man3/acp_deque_t.3 \
man/man3/acp_dereference.3 \
man/man3/acp_dereference_deque_it.3 \
man/man3/acp_dereference_list_it.3 \
man/man3/acp_dereference_map_it.3 \
man/man3/acp_dereference_set_it.3 \
man/man3/acp_dereference_value.3 \
man/man3/acp_dereference_vector_it.3 \
man/man3/acp_destroy.3 \
man/man3/acp_destroy_deque.3 \
man/man3/acp_destroy_list.3 \
man/man3/acp_destroy_map.3 \
man/man3/acp_destroy_set.3 \
man/man3/acp_destroy_vector.3 \
man/man3/acp_destroy_ws.3 \
man/man3/acp_distance.3 \
man/man3/acp_distance_deque_it.3 \
man/man3/acp_distance_list_it.3 \
man/man3/acp_distance_vector_it.3 \
man/man3/acp_element_t.3 \
man/man3/acp_empty.3 \
man/man3/acp_empty_deque.3 \
man/man3/acp_empty_list.3 \
man/man3/acp_empty_map.3 \
man/man3/acp_empty_set.3 \
man/man3/acp_empty_vector.3 \
man/man3/acp_end.3 \
man/man3/acp_end_deque.3 \
man/man3/acp_end_list.3 \
man/man3/acp_end_map.3 \
man/man3/acp_end_set.3 \
man/man3/acp_end_vector.3 \
man/man3/acp_erase.3 \
man/man3/acp_erase_deque.3 \
man/man3/acp_erase_list.3 \
man/man3/acp_erase_map.3 \
man/man3/acp_erase_range.3 \
man/man3/acp_erase_range_deque.3 \
man/man3/acp_erase_range_list.3 \
man/man3/acp_erase_range_map.3 \
man/man3/acp_erase_range_set.3 \
man/man3/acp_erase_range_vector.3 \
man/man3/acp_erase_set.3 \
man/man3/acp_erase_vector.3 \
man/man3/acp_finalize.3 \
man/man3/acp_find.3 \
man/man3/acp_find_map.3 \
man/man3/acp_find_set.3 \
man/man3/acp_free.3 \
man/man3/acp_free_ch.3 \
man/man3/acp_front.3 \
man/man3/acp_ga_t.3 \
man/man3/acp_handle_t.3 \
man/man3/acp_increment.3 \
man/man3/acp_increment_list_it.3 \
man/man3/acp_increment_map_it.3 \
man/man3/acp_increment_set_it.3 \
man/man3/acp_init.3 \
man/man3/acp_inquire.3 \
man/man3/acp_insert.3 \
man/man3/acp_insert_deque.3 \
man/man3/acp_insert_list.3 \
man/man3/acp_insert_map.3 \
man/man3/acp_insert_range.3 \
man/man3/acp_insert_range_deque.3 \
man/man3/acp_insert_range_list.3 \
man/man3/acp_insert_range_map.3 \
man/man3/acp_insert_range_set.3 \
man/man3/acp_insert_range_vector.3 \
man/man3/acp_insert_set.3 \
man/man3/acp_insert_vector.3 \
man/man3/acp_list_it_t.3 \
man/man3/acp_list_t.3 \
man/man3/acp_malloc.3 \
man/man3/acp_map_ib_t.3 \
man/man3/acp_map_it_t.3 \
man/man3/acp_map_t.3 \
man/man3/acp_merge.3 \
man/man3/acp_merge_list.3 \
man/man3/acp_nbfree_ch.3 \
man/man3/acp_nbrecv_ch.3 \
man/man3/acp_nbsend_ch.3 \
man/man3/acp_or4.3 \
man/man3/acp_or8.3 \
man/man3/acp_pair_t.3 \
man/man3/acp_pop_back.3 \
man/man3/acp_pop_back_deque.3 \
man/man3/acp_pop_back_list.3 \
man/man3/acp_pop_back_vector.3 \
man/man3/acp_pop_front.3 \
man/man3/acp_pop_front_deque.3 \
man/man3/acp_pop_front_list.3 \
man/man3/acp_procs.3 \
man/man3/acp_push_back.3 \
man/man3/acp_push_back_deque.3 \
man/man3/acp_push_back_list.3 \
man/man3/acp_push_back_vector.3 \
man/man3/acp_push_front.3 \
man/man3/acp_push_front_deque.3 \
man/man3/acp_push_front_list.3 \
man/man3/acp_query_address.3 \
man/man3/acp_query_color.3 \
man/man3/acp_query_ga.3 \
man/man3/acp_query_rank.3 \
man/man3/acp_query_starter_ga.3 \
man/man3/acp_rank.3 \
man/man3/acp_read_ws.3 \
man/man3/acp_register_memory.3 \
man/man3/acp_remove.3 \
man/man3/acp_remove_list.3 \
man/man3/acp_request_t.3 \
man/man3/acp_reserve.3 \
man/man3/acp_reserve_deque.3 \
man/man3/acp_reserve_vector.3 \
man/man3/acp_reset.3 \
man/man3/acp_reverse.3 \
man/man3/acp_reverse_list.3 \
man/man3/acp_set_ib_t.3 \
man/man3/acp_set_it_t.3 \
man/man3/acp_set_t.3 \
man/man3/acp_setparams_ws.3 \
man/man3/acp_size.3 \
man/man3/acp_size_deque.3 \
man/man3/acp_size_list.3 \
man/man3/acp_size_map.3 \
man/man3/acp_size_set.3 \
man/man3/acp_size_value.3 \
man/man3/acp_size_vector.3 \
man/man3/acp_sort.3 \
man/man3/acp_sort_list.3 \
man/man3/acp_splice.3 \
man/man3/acp_splice_list.3 \
man/man3/acp_splice_range_list.3 \
man/man3/acp_swap.3 \
man/man3/acp_swap4.3 \
man/man3/acp_swap8.3 \
man/man3/acp_swap_deque.3 \
man/man3/acp_swap_list.3 \
man/man3/acp_swap_map.3 \
man/man3/acp_swap_set.3 \
man/man3/acp_swap_vector.3 \
man/man3/acp_sync.3 \
man/man3/acp_unique.3 \
man/man3/acp_unique_list.3 \
man/man3/acp_unregister_memory.3 \
man/man3/acp_vector_it_t.3 \
man/man3/acp_vector_t.3 \
man/man3/acp_wait_ch.3 \
man/man3/acp_waitall_ch.3 \
man/man3/acp_write_ws.3 \
man/man3/acp_wsd_t.3 \
man/man3/acp_wsditem.3 \
man/man3/acp_xor4.3 \
man/man3/acp_xor8.3 \
man/man3/acpbl.3 \
man/man3/acpcl.3 \
man/man3/acpdl.3 \
man/man3/acpml.3 \
man/man3/data.3 \
man/man3/deque.3 \
man/man3/doc.h.3 \
man/man3/elem.3 \
man/man3/first.3 \
man/man3/ga.3 \
man/man3/ga_data.3 \
man/man3/gas.3 \
man/man3/index.3 \
man/man3/infrastructure.3 \
man/man3/it.3 \
man/man3/key_data.3 \
man/man3/keys.3 \
man/man3/list.3 \
man/man3/map.3 \
man/man3/ngas.3 \
man/man3/num_ranks.3 \
man/man3/procs.3 \
man/man3/rank.3 \
man/man3/second.3 \
man/man3/set.3 \
man/man3/size.3 \
man/man3/size_default.3 \
man/man3/size_remainder.3 \
man/man3/size_ws.3 \
man/man3/sizes.3 \
man/man3/slot.3 \
man/man3/success.3 \
man/man3/vector.3
