#
# Copyright (c) 2012-2015 ACE Project
# $COPYRIGHT$
#

SUBDIRS = src sample scripts
EXTRA_DIST = README INSTALL VERSION Doxyfile Doxyfile.jp License \
	     ChangeLog RELEASE_NOTES

ACLOCAL_AMFLAGS = -I config

man_MANS = \
man/man3/ACP_ATKEY_NULL.3 \
man/man3/ACP_GA_NULL.3 \
man/man3/ACP_HANDLE_ALL.3 \
man/man3/ACP_HANDLE_CONT.3 \
man/man3/ACP_HANDLE_NULL.3 \
man/man3/GMA.3 \
man/man3/GMM.3 \
man/man3/acp.h.3 \
man/man3/acp_abort.3 \
man/man3/acp_add4.3 \
man/man3/acp_add8.3 \
man/man3/acp_and4.3 \
man/man3/acp_and8.3 \
man/man3/acp_atkey_t.3 \
man/man3/acp_back.3 \
man/man3/acp_back_vector.3 \
man/man3/acp_begin.3 \
man/man3/acp_begin_list.3 \
man/man3/acp_begin_vector.3 \
man/man3/acp_cas4.3 \
man/man3/acp_cas8.3 \
man/man3/acp_ch_t.3 \
man/man3/acp_clear.3 \
man/man3/acp_clear_vector.3 \
man/man3/acp_colors.3 \
man/man3/acp_complete.3 \
man/man3/acp_copy.3 \
man/man3/acp_create.3 \
man/man3/acp_create_ch.3 \
man/man3/acp_create_list.3 \
man/man3/acp_create_vector.3 \
man/man3/acp_decrement.3 \
man/man3/acp_decrement_list.3 \
man/man3/acp_decrement_vector.3 \
man/man3/acp_deque_it_t.3 \
man/man3/acp_deque_t.3 \
man/man3/acp_destroy.3 \
man/man3/acp_destroy_list.3 \
man/man3/acp_destroy_vector.3 \
man/man3/acp_duplicate.3 \
man/man3/acp_duplicate_vector.3 \
man/man3/acp_element.3 \
man/man3/acp_element_vector.3 \
man/man3/acp_empty.3 \
man/man3/acp_empty_vector.3 \
man/man3/acp_end.3 \
man/man3/acp_end_list.3 \
man/man3/acp_end_vector.3 \
man/man3/acp_equal.3 \
man/man3/acp_equal_vector.3 \
man/man3/acp_erase.3 \
man/man3/acp_erase_list.3 \
man/man3/acp_erase_vector.3 \
man/man3/acp_finalize.3 \
man/man3/acp_free.3 \
man/man3/acp_free_ch.3 \
man/man3/acp_front.3 \
man/man3/acp_front_vector.3 \
man/man3/acp_ga_t.3 \
man/man3/acp_greater.3 \
man/man3/acp_greater_or_equal.3 \
man/man3/acp_greater_or_equal_vector.3 \
man/man3/acp_greater_vector.3 \
man/man3/acp_handle_t.3 \
man/man3/acp_increment.3 \
man/man3/acp_increment_list.3 \
man/man3/acp_increment_vector.3 \
man/man3/acp_init.3 \
man/man3/acp_inquire.3 \
man/man3/acp_insert.3 \
man/man3/acp_insert_list.3 \
man/man3/acp_insert_vector.3 \
man/man3/acp_less.3 \
man/man3/acp_less_or_equal.3 \
man/man3/acp_less_or_equal_vector.3 \
man/man3/acp_less_vector.3 \
man/man3/acp_list_it_t.3 \
man/man3/acp_list_t.3 \
man/man3/acp_malloc.3 \
man/man3/acp_map_it_t.3 \
man/man3/acp_map_t.3 \
man/man3/acp_max_size.3 \
man/man3/acp_max_size_vector.3 \
man/man3/acp_nbfree_ch.3 \
man/man3/acp_nbrecv_ch.3 \
man/man3/acp_nbsend_ch.3 \
man/man3/acp_not_equal.3 \
man/man3/acp_not_equal_vector.3 \
man/man3/acp_or4.3 \
man/man3/acp_or8.3 \
man/man3/acp_pop_back.3 \
man/man3/acp_pop_back_vector.3 \
man/man3/acp_procs.3 \
man/man3/acp_push_back.3 \
man/man3/acp_push_back_list.3 \
man/man3/acp_push_back_vector.3 \
man/man3/acp_query_address.3 \
man/man3/acp_query_color.3 \
man/man3/acp_query_ga.3 \
man/man3/acp_query_rank.3 \
man/man3/acp_query_starter_ga.3 \
man/man3/acp_rank.3 \
man/man3/acp_rbegin.3 \
man/man3/acp_rbegin_vector.3 \
man/man3/acp_register_memory.3 \
man/man3/acp_rend.3 \
man/man3/acp_rend_vector.3 \
man/man3/acp_request_t.3 \
man/man3/acp_reset.3 \
man/man3/acp_set_it_t.3 \
man/man3/acp_set_t.3 \
man/man3/acp_swap.3 \
man/man3/acp_swap4.3 \
man/man3/acp_swap8.3 \
man/man3/acp_swap_vector.3 \
man/man3/acp_sync.3 \
man/man3/acp_unregister_memory.3 \
man/man3/acp_vector_it_t.3 \
man/man3/acp_vector_t.3 \
man/man3/acp_wait_ch.3 \
man/man3/acp_waitall_ch.3 \
man/man3/acp_xor4.3 \
man/man3/acp_xor8.3 \
man/man3/acpbl.3 \
man/man3/acpcl.3 \
man/man3/acpdl.3 \
man/man3/acpml.3 \
man/man3/deque.3 \
man/man3/infrastructure.3 \
man/man3/list.3 \
man/man3/map.3 \
man/man3/set.3 \
man/man3/vector.3
